# wedding_website

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/activities/: admin.py  models.py  serializers.py  urls.py  views.py
backend/activities/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  nginx.conf  tailwind.config.js
frontend/src/: App.jsx
frontend/src/pages/: ActivitiesPage.jsx  HomePage.jsx
frontend/src/services/: api.jsx
